# stub/controllers/CandidateService.js
@@ -3,7 +3,7 @@
 exports.candidateCandidate_idDELETE = function(args, res, next) {
   /**
    * parameters expected in the args:
-  * candidate_id (String)
+  * candidate_id (Integer)
   * token (String)
   **/
   // no response value expected for this operation
@@ -13,23 +13,23 @@ exports.candidateCandidate_idDELETE = function(args, res, next) {
 exports.candidateCandidate_idGET = function(args, res, next) {
   /**
    * parameters expected in the args:
-  * candidate_id (String)
+  * candidate_id (Integer)
   * token (String)
   **/
     var examples = {};
   examples['application/json'] = {
   "phone" : "1300000000",
   "record" : {
-    "code" : "aeiou",
-    "chat" : "aeiou",
-    "report" : "aeiou",
-    "video" : "aeiou",
-    "board" : "aeiou"
+    "code" : "",
+    "chat" : "",
+    "report" : "",
+    "video" : "",
+    "board" : ""
   },
   "name" : "Mike",
-  "id" : "3001",
+  "id" : 3001,
   "email" : "example@example.com",
-  "roomId" : "1001",
+  "roomId" : 1001,
   "status" : "aeiou"
 };
   if(Object.keys(examples).length > 0) {
@@ -45,7 +45,7 @@ exports.candidateCandidate_idGET = function(args, res, next) {
 exports.candidateCandidate_idPUT = function(args, res, next) {
   /**
    * parameters expected in the args:
-  * candidate_id (String)
+  * candidate_id (Integer)
   * candidate (Candidate)
   * token (String)
   **/
@@ -53,16 +53,16 @@ exports.candidateCandidate_idPUT = function(args, res, next) {
   examples['application/json'] = {
   "phone" : "1300000000",
   "record" : {
-    "code" : "aeiou",
-    "chat" : "aeiou",
-    "report" : "aeiou",
-    "video" : "aeiou",
-    "board" : "aeiou"
+    "code" : "",
+    "chat" : "",
+    "report" : "",
+    "video" : "",
+    "board" : ""
   },
   "name" : "Mike",
-  "id" : "3001",
+  "id" : 3001,
   "email" : "example@example.com",
-  "roomId" : "1001",
+  "roomId" : 1001,
   "status" : "aeiou"
 };
   if(Object.keys(examples).length > 0) {
@@ -78,7 +78,7 @@ exports.candidateCandidate_idPUT = function(args, res, next) {
 exports.candidateCandidate_idStatusPUT = function(args, res, next) {
   /**
    * parameters expected in the args:
-  * candidate_id (String)
+  * candidate_id (Integer)
   * status (String)
   * token (String)
   **/
@@ -86,18 +86,55 @@ exports.candidateCandidate_idStatusPUT = function(args, res, next) {
   examples['application/json'] = {
   "phone" : "1300000000",
   "record" : {
-    "code" : "aeiou",
-    "chat" : "aeiou",
-    "report" : "aeiou",
-    "video" : "aeiou",
-    "board" : "aeiou"
+    "code" : "",
+    "chat" : "",
+    "report" : "",
+    "video" : "",
+    "board" : ""
   },
   "name" : "Mike",
-  "id" : "3001",
+  "id" : 3001,
   "email" : "example@example.com",
-  "roomId" : "1001",
+  "roomId" : 1001,
   "status" : "aeiou"
 };
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
+exports.candidateFileGET = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * token (String)
+  **/
+    var examples = {};
+  examples['application/json'] = {
+  "xlsx" : "https://example.com/example.xlsx",
+  "csv" : "https://example.com/example.csv"
+};
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
+exports.candidateFilePOST = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * token (String)
+  **/
+    var examples = {};
+  examples['application/json'] = "";
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
@@ -120,16 +157,16 @@ exports.candidateGET = function(args, res, next) {
   "candidates" : [ {
     "phone" : "1300000000",
     "record" : {
-      "code" : "aeiou",
-      "chat" : "aeiou",
-      "report" : "aeiou",
-      "video" : "aeiou",
-      "board" : "aeiou"
+      "code" : "",
+      "chat" : "",
+      "report" : "",
+      "video" : "",
+      "board" : ""
     },
     "name" : "Mike",
-    "id" : "3001",
+    "id" : 3001,
     "email" : "example@example.com",
-    "roomId" : "1001",
+    "roomId" : 1001,
     "status" : "aeiou"
   } ],
   "offset" : 123,
@@ -149,24 +186,63 @@ exports.candidateGET = function(args, res, next) {
 exports.candidatePOST = function(args, res, next) {
   /**
    * parameters expected in the args:
-  * candidate (Candidate)
+  * candidate (PostCandidate)
   * token (String)
   **/
     var examples = {};
   examples['application/json'] = {
   "phone" : "1300000000",
   "record" : {
-    "code" : "aeiou",
-    "chat" : "aeiou",
-    "report" : "aeiou",
-    "video" : "aeiou",
-    "board" : "aeiou"
+    "code" : "",
+    "chat" : "",
+    "report" : "",
+    "video" : "",
+    "board" : ""
   },
   "name" : "Mike",
-  "id" : "3001",
+  "id" : 3001,
   "email" : "example@example.com",
-  "roomId" : "1001",
+  "roomId" : 1001,
   "status" : "aeiou"
+};
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
+exports.candidateRoomRoom_idGET = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * room_id (Integer)
+  * token (String)
+  * offset (Integer)
+  * limit (Integer)
+  **/
+    var examples = {};
+  examples['application/json'] = {
+  "candidates" : [ {
+    "phone" : "1300000000",
+    "record" : {
+      "code" : "",
+      "chat" : "",
+      "report" : "",
+      "video" : "",
+      "board" : ""
+    },
+    "name" : "Mike",
+    "id" : 3001,
+    "email" : "example@example.com",
+    "roomId" : 1001,
+    "status" : "aeiou"
+  } ],
+  "offset" : 123,
+  "limit" : 123,
+  "count" : 123
 };
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
